--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    
+    <my-widget project-id="58"></my-widget>
+<script src="https://feebackhub-widget.vercel.app/widget.umd.js"></script>
     <header>
 
         <div id="nav">
